syntax = "proto2";
package redhatgamedev.srt;

import "SecurityCommandBuffer.proto";
import "RawInputCommandBuffer.proto";


message CommandBuffer
{
	enum CommandBufferType
	{
        UNKNOWN = 0;
		SECURITY = 1;
        RAWINPUT = 2;
	}
	required CommandBufferType type = 1 [default = UNKNOWN];
    
    optional SecurityCommandBuffer securityCommandBuffer = 2;
    optional RawInputCommandBuffer rawInputCommandBuffer = 3;
}
